@@ -1,0 +1,8 @@
+"""Mnemosyne - a weblog generator."""
+
+__version__ = '0.7'
+__author__ = 'Decklin Foster'
+__email__ = 'decklin@red-bean.com'
+__url__ = 'http://www.red-bean.com/~decklin/software/mnemosyne/'
+
+__all__ = ['muse', 'entry', 'utils']
